syntax = "proto3";

package auth;

option go_package = "./grpc/auth";

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message AuthResponse {
  string status = 1;
}

message LoginResponse {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
}
